# generations

./: .gitignore  README.md  criteria.json  pyproject.toml
.generations_tmp_backup/: README.md
.generations_tmp_backup/site/: index.html
.generations_tmp_backup/state/: loop_snapshot.json  memory.sqlite3  website_notes.md
docs/: design_decision_record.md  design_space_logistics_core.md  game_design.md  journal.md  journal_schema.md  roadmap.md
docs/design/: economy.md
game/: state.py  turn.py
game/simulation/: __init__.py  runner.py
game_workspace/design/: cargo_routing.md  core_loop.md
games/active/: README.md  game.toml
games/hello_game/: README.md  main.py
games/space_logistics/: README.md
generations/memory/: schema.json  state_schema.json
generations/planning_docs/: block_001_plan.md
generations/tests/: test_active_game.py  test_journal.py  test_planner.py  test_planning_schema.py  test_runner.py  test_smoke.py  test_web.py
generations/tools/: validate_loop_state.py
generations/validation/: pre_commit_hook.sh
generations/vision/: vision_index_v001.md  vision_v001_game.md  vision_v001_monetization_platform.md  vision_v001_self.md
scripts/: configure-opencode-and-run.sh
site/: index.html  style.css
src/generations.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
state/: journal.jsonl  last_plan.json  loop_snapshot.json  memory.sqlite3  runtime.json  website_notes.md
tests/: test_economy.py  test_journal.py  test_logistics.py  test_schemas.py  test_simulation_integration.py  test_simulation_loop.py  test_smoke.py
(+98 files in other folders)
