[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generations"
version = "0.2.0"
description = "Generations autonomous game-development platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
generations = "generations.cli:main"

[tool.setuptools]
package-dir = {"" = "generations/src"}

[tool.setuptools.packages.find]
where = ["generations/src"]

[tool.pytest.ini_options]
testpaths = ["generations/tests"]
addopts = "-m 'not slow'"
markers = [
  "slow: end-to-end integration tests that exercise a full autonomous loop",
]
